Updated fonts and assets

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,11 +54,11 @@
   }
 }
 .title-font {
-  font-family: "Lexend Zetta", sans-serif;
+  font-family: "Lexend Giga", sans-serif;
 }
 .body-font {
-  font-family: "Lora", serif;
+  font-family: "Manrope", sans-serif;
 }
 .blog-font {
-  font-family: "Lexend Deca", sans-serif;
+  font-family: "Manrope", sans-serif;
 }
